upd:added playwright for local tests for now

--- a/public/locales/es/translation.json
+++ b/public/locales/es/translation.json
@@ -117,7 +117,7 @@
   },
   "sidebar": {
     "nav": {
-      "home": "Home",
+      "home": "Inicio",
       "onboard_user": "Onboard Usuario",
       "search_users": "Buscar nuevos usuarios"
     },
